--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: devops test
+name: ansible_action
 on:
   push:
     branches: [ main ]
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: Deploy to EC2
-    runs-on: ubuntu-latest    ## 작업을 어디다가 실행할 것인지
+    runs-on: ubuntu-latest    # 작업을 어디다가 실행할 것인지
 
     steps:    ## 어떤 작업을 실행할 것인지
       - name: get code from github
@@ -33,6 +33,7 @@ jobs:
             43.201.77.81 ansible_ssh_user=ubuntu
 
       - name: Download Code
+        run: echo start
         with:
           script: |
             sudo rm -rf ./ansible-action
