--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: ansibleTest.yml
-          directory: ./ansible-action/ansible
+          directory: /home/runner/work/ansible-action/ansible-action
           key: ${{secrets.SSH_PRIVATE_KEY}}
           inventory: |
             [all]
