--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,14 @@ jobs:
             sudo dnf -y install centos-release-ansible-29
             sudo sed -i -e "s/enabled=1/enabled=0/g" /etc/yum.repos.d/CentOS-SIG-ansible-29.repo
             sudo dnf --enablerepo=centos-ansible-29 -y install ansible
+            sudo rm -rf ./ansible-action
             sudo git clone https://github.com/Hosae0905/ansible-action.git
           
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: ansibleTest.yml
-          directory: /home/runner/work/ansible-action/ansible
+          directory: ./ansible-action/ansible
           key: ${{secrets.SSH_PRIVATE_KEY}}
           inventory: |
             [all]
@@ -34,6 +35,5 @@ jobs:
 
       - name: Download Code
         run: |
-          sudo rm -rf ./ansible-action
           sudo mv -f ./ansible-action/*.html /var/www/html
       
